--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@tailwind base;
+/* @tailwind base;
 
 @tailwind components;
 
@@ -29,4 +29,33 @@ h2 {
   font: 400 40px/1.5 Helvetica, Verdana, sans-serif;
   margin: 0;
   padding: 0;
+} */
+
+.pagination {
+  margin: 15px auto;
+  display: flex;
+  list-style: none;
+  outline: none;
+}
+.pagination > .active > a{
+  background-color: #339e87 ;
+  border-color: #339e87 ;
+  color: #fff;
+}
+.pagination > li > a{
+  border: 1px solid #339e87 ;
+  padding: 5px 10px;
+  outline: none;
+  cursor: pointer;
+}
+.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus{
+  background-color: #339e87 ;
+  border-color: #339e87;
+  outline: none ;
+}
+.pagination > li > a, .pagination > li > span{
+  color: #339e87
+}
+.pagination > li:first-child > a, .pagination > li:first-child > span, .pagination > li:last-child > a, .pagination > li:last-child > span{
+  border-radius: unset
 }
